--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- Add your site or application content here -->
 	<div class="text-center">
-	<img src='./img/img400x400png' />
+	<img src='///img/img400x400.png' />
         <h1><a href="///pavian.eu">pavian.eu</a></h1>
 
         <script src="./components/jquery/jquery.min.js"></script>
