--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
 
         <!-- Add your site or application content here -->
 	<div class="text-center">
-	<img src='///img/img400x400.png' />
-        <h1><a href="///pavian.eu">pavian.eu</a></h1>
+          <h1><a href="///pavian.eu">pavian.eu</a></h1>
+          <img src='/img/img400x400.png' />
+        </div>
 
         <script src="./components/jquery/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
