--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
 
         <!-- Add your site or application content here -->
 	<div class="text-center">
-	<img src='///img/img400x400.png' />
+	<! --img src='///img/img400x400.png' / -->
         <h1><a href="///pavian.eu">pavian.eu</a></h1>
+
+	<a class="twitter-timeline" href="https://twitter.com/hashtag/pavian.eu" data-widget-id="638342845963837440">#pavian.eu Tweets</a>
+	<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
         <script src="./components/jquery/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
