--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <h1><a href="///pavian.eu">pavian.eu</a></h1>
           <!-- img src='/img/img400x400.png' / -->
 
-	  <a class="twitter-timeline" href="https://twitter.com/hashtag/pavian.eu" data-widget-id="638342845963837440">#pavian.eu Tweets</a>
+	  <a class="twitter-timeline" href="https://twitter.com/hashtag/pavian.eu" data-widget-id="638342845963837440">#pavianeu Tweets</a>
 	  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	</div>
 
