--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <h1><a href="///pavian.eu">pavian.eu</a></h1>
           <!-- img src='/img/img400x400.png' / -->
 
-	  <a class="twitter-timeline" href="https://twitter.com/hashtag/pavian.eu" data-widget-id="638342845963837440">#pavianeu Tweets</a>
-	  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	       <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/hashtag/pavianeu" data-widget-id="638347099730509824" data-chrome="noheader nofooter">#pavianeu Tweets</a>
+           <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	</div>
 
         <script src="./components/jquery/jquery.min.js"></script>
